--- a/html/startseite.html
+++ b/html/startseite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mensa Adaqua</title>
+    <link rel="stylesheet" href="elements.css">
 </head>
 <body>
     <header>
