--- a/html/startseite.html
+++ b/html/startseite.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="elements.css">
 </head>
 <body>
+    <div id="wrapper">
     <header>
         <h1>Mensa Adaqua</h1>
     </header>
-    <br>
     <aside>
         Öffnungszeiten: <br>
         blabla
     </aside>
-    <br>
     <article>
         <section>
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
@@ -27,18 +26,20 @@
             no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>
             <a href="article1.html" title="mehr lesen...">mehr lesen...</a>
         </section>
-        <br>
         <section>
             <iframe width="340" height="200" src="https://www.youtube.com/embed/NOwThplVRbA" frameborder="0" allowfullscreen></iframe>
             <br>
             <a href="article2.html" title="mehr lesen...">mehr lesen...</a>
         </section>
     </article>
-    <br>
     <nav>
         <a href="startseite.html" title="Startseite">Startseite</a><br>
         <a href="mitarbeiterseite.html" title="Mitarbeiterseite">Mitarbeiterseite</a><br>
         <a href="gaesteseite.html" title="Gästeseite">Gästeseite</a><br>
     </nav>
+    <footer>
+        Copyright 1999-2016
+    </footer>
+        </div>
 </body>
 </html>
