fixed css fo startseite

--- a/html/startseite.html
+++ b/html/startseite.html
@@ -6,13 +6,19 @@
     <link rel="stylesheet" href="elements.css">
 </head>
 <body>
-    <div id="wrapper">
     <header>
         <h1>Mensa Adaqua</h1>
     </header>
     <aside>
         Öffnungszeiten: <br>
-        blabla
+        <div id="oeffnungszeiten">
+            Mo: 10:00 - 14:00<br>
+            Di: 10:00 - 14:00<br>
+            Mi: 10:00 - 14:00<br>
+            Do: 10:00 - 14:00<br>
+            Fr: 10:00 - 14:00<br>
+            Sa: 10:00 - 14:00
+        </div>
     </aside>
     <article>
         <section>
@@ -40,6 +46,5 @@
     <footer>
         Copyright 1999-2016
     </footer>
-        </div>
 </body>
 </html>
