--- a/app/startseite.html
+++ b/app/startseite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mensa Adaqua</title>
-    <link rel="stylesheet" href="elements.css">
+    <link rel="stylesheet" href="startseite.css">
 </head>
 <body>
     <header>
